--- a/Meltjac/about.html
+++ b/Meltjac/about.html
@@ -24,7 +24,7 @@
         <div class="useful-links">
             <h1>Useful Links</h1>
             <a href="https://www.facebook.com/Meltjacservices"target="_blank"><i class="fa-brands fa-facebook">Facebook</i></a>
-            <a href="https://twitter.com/@meltjac"target="_blank"><i class="fa-brands fa-twitter">Twitter</i></a>
+            <a href="https://www.twitter.com/@meltjac"target="_blank"><i class="fa-brands fa-twitter">Twitter</i></a>
             <a href="https://wa.me/+254711373292"target="_blank"><i class="fa-brands fa-whatsapp">Whatsapp</i></a>
             <a href="index.html"><i class="fas fa-stream">Home</i></a>
         </div>
